# circuit-modeling

./: README.md
cppsim/designs/sallen_key/: design.cpp  design.h
cppsim/lib/comp/: resistor.h
cppsim/lib/prime/: element.cpp  net.cpp  net.h  node.cpp  node.h  terminal_2way.cpp  terminal_2way.h  terminal_4way.cpp  terminal_4way.h
cppsim/lib/utils/: uid.cpp  uid.h
cppsim/main/host/: CMakeLists.txt  main.cpp
demo/src/: CMakeLists.txt  main.cpp
kicad/: Device.json  Simulation_SPICE.json  lib_search.py  lib_to_dict.py  sch.py  test-resaved.kicad_sch  test.kicad_sch
protobuf/: netlist.proto
protobuf/python/: dump_msg.py
system_cpp/designs/rlc_lp/: design.cpp  design.h  rlc_lp.cpp  rlc_lp.h
system_cpp/designs/sallen_key/: design.cpp  sallen_key.cpp  sallen_key.h
system_cpp/lib/comp/: resistor.cpp
system_cpp/lib/prime/: element.h  net.cpp  node.cpp  node.h  terminal_2way.cpp  terminal_4way.cpp  voltage_source.cpp  voltage_source.h
system_cpp/lib/utils/: uid.cpp  uid.h
system_cpp/main/host/: CMakeLists.txt  main.cpp
